# chemcost-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: analyze_multistep_cascade.py  analyze_noise_subtypes.py  analyze_stage_pipeline.py  analyze_within_model_traj.py  download_data.py  extract_stage_errors.py  merge_results.py  plot_abstention.py  plot_failure_decomposition.py  plot_failure_frontier.py  plot_knowledge_procurement.py  plot_multistep_cascade.py  plot_noise.py  plot_noise_degradation.py  plot_noise_subtypes.py  plot_reaction_type.py  plot_recall_loss_sankey.py  plot_stage_pipeline.py  plot_tool_correlation.py  plot_tool_panel_c.py  plot_tool_strategies.py  plot_tool_usage.py  plot_tools_vs_notool.py  plot_traj_patterns.py  run_evaluation.py  score_human_eval.py
src/chemcost/: __init__.py  cost_calculator.py
src/chemcost/baselines/: prompting_baselines.py  react_agent.py
src/chemcost/evaluation/: ablation.py  error_analysis.py  evaluator.py  metrics.py  tool_tracker.py
src/chemcost/noise/: __init__.py  chemical_aliases.py  noise_injector.py
src/chemcost/pricing/: price_normalizer.py  pricing_db.py  scraper_base.py
src/chemcost/tools/: agent_tools.py
tests/: test_cost_calculator.py  test_evaluation_noise_pipeline.py  test_metrics.py  test_natural_language_input.py  test_noise_injector.py  test_noise_stage2.py  test_noise_stage3.py  test_noise_stage4.py  test_pricing_db.py  test_prompting_baselines.py  test_tool_evaluation.py
