[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemcost"
version = "0.1.0"
description = "ChemCost: a benchmark for chemical reaction procurement cost estimation by LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["benchmark", "llm-agents", "tool-use", "chemistry", "procurement-cost"]

dependencies = [
    "rdkit",
    "httpx>=0.25",
    "tqdm>=4.66",
]

[project.optional-dependencies]
eval = [
    "openai>=1.0",
    "anthropic>=0.18",
    "claude-agent-sdk",
]
analysis = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/chemcost"]
